# submission_example

./: main.py
autonomous_company_v10/: .env.example  .gitignore  pyproject.toml
autonomous_company_v10/config/: tools_allowlist.yaml
autonomous_company_v10/prompts/: ceo.md.jinja2
autonomous_company_v10/src/autonomous_company/: __init__.py  a2a.py  ceo.py  cli.py  comm.py  condition.py  config.py  dag.py  decisions.py  events.py  factory.py  hitl.py  interfaces.py  llm.py  models.py  native_agents.py  security_hooks.py  storage.py  telemetry.py  worker.py
autonomous_company_v10/tests/: conftest.py  test_config.py  test_dag.py  test_security_allowlist.py  test_telemetry.py
